# stripmap

./: .gitignore  LICENSE  README.md  polygon.py  pyproject.toml  scratchwork.py  stripmap.py
num_methods/: solveparam.py
src/: scratch.py
src/stripmap/: example.py  map.py  polygon.py  stripmap.py
src/stripmap/num_methods/: compute_map.py  solve_param.py
src/stripmap_ajy25/: example.py  map.py  num_methods.py  stripmap_example.py
src/stripmap_ajy25/private/: stripmap_old.py
testing/: scqdata.m  stquad.m  test_stripmap.py
tests/: evalinvtester.m  paramstester.m  polygon_sampling.py  stparam_y.m  stpfun.m  stquad.m  test_stripmap.py
