[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "stripmap"
version = "0.0.1"
authors = [
  { name="Andrew J Yang", email="andrew_j_yang@brown.edu" },
]
description = "Conformal mapping from infinite strip to bounded polygon"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/ajy25/stripmap"
"Bug Tracker" = "https://github.com/ajy25/stripmap"
